[package]
name = "etapa_avaliativa_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

[profile.release]
opt-level = 3  # Optimization Level 3 for maximum optimization
lto = "fat"    # Enable Link Time Optimization (LTO)
